adjusted css to make it readable and presentable

--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
          </main>
 
     <footer> 
-        Coded by 
+      <p>  Coded by 
         <a href="https://github.com/Abulele75"  >Abulele Ntwanambi</a> code hosted on 
         <a href="https://github.com/Abulele75/Weather-application">Github</a>
          and website posted on
-        <a href="https://update-weather.netlify.app/">Netlify</a>
+      
+         <a href="https://update-weather.netlify.app/">Netlify</a>
+      </p>
     </footer>
     </div>
 <script src="index.js"> </script>
